<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_formt_rl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/note_fragment_rl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dim_2">

        <TextView
            android:id="@+id/note_fragment_txt_tit_gravity"
            android:layout_width="@dimen/dim_100"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dim_5"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:padding="@dimen/dim_5"
            android:text="@string/note_title"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/font_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dim_5"
            android:layout_marginEnd="@dimen/dim_5"
            android:layout_toEndOf="@id/note_fragment_txt_tit_gravity"
            android:orientation="horizontal"
            android:padding="@dimen/dim_5">


            <ImageView
                android:id="@+id/note_fragment_img_tit_cengravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_center_darkblue24" />

            <ImageView
                android:id="@+id/note_fragment_img_tit_lfgravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_left_darkblue24" />

            <ImageView
                android:id="@+id/note_fragment_img_tit_rtgravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_right_darkblue24" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/note_fragment_rl_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_fragment_rl_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dim_2">

        <TextView
            android:id="@+id/note_fragment_txt_sub_gravity"
            android:layout_width="@dimen/dim_100"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dim_5"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:padding="@dimen/dim_5"
            android:text="@string/note_subject"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/font_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dim_5"
            android:layout_marginEnd="@dimen/dim_5"
            android:layout_toEndOf="@id/note_fragment_txt_sub_gravity"
            android:orientation="horizontal"
            android:padding="@dimen/dim_5">


            <ImageView
                android:id="@+id/note_fragment_img_sub_cengravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_center_darkblue24" />

            <ImageView
                android:id="@+id/note_fragment_img_sub_lfgravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_left_darkblue24" />

            <ImageView
                android:id="@+id/note_fragment_img_sub_rtgravity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/vector_right_darkblue24" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/note_fragment_rl_sub_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_fragment_rl_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/note_fragment_txt_subsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dim_5"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/subject_size"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/font_16" />

        <SeekBar
            android:id="@+id/note_fragment_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/note_fragment_txt_subsize"
            android:indeterminate="false"
            android:max="50"
            android:padding="@dimen/dim_5"
            android:progress="22"
            android:progressDrawable="@drawable/fontseekbar"
            android:theme="@style/Widget.AppCompat.SeekBar"
            android:thumb="@drawable/fontseekbarthumb" />
    </RelativeLayout>

</RelativeLayout>
